# omarmohdharis.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  contact.html  index.html  index.qmd  projects.html  pyproject.toml  requirements.txt  resume.html  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
_site/: about.html  index.html  search.json
_site/site_libs/bootstrap/: bootstrap-ed29be17f7a4e5391bbd6651c08d9acf.min.css
css/: champloo.css  slice-intro.css  style.css
js/: nav.js  scene.js  slice-intro.js
