[project]
name = "omarmohdharis-github-io"
version = "0.0.1"
description = "Initial website for Omar Mohd Haris Github"
authors = [
    {name = "omarmohdharis",email = "megatoma@bu.edu"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.5.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "omarmohdharis"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
